Edit text for spelling and content.

--- a/Vincent/fractionAddition/fractionAddition.ipynb
+++ b/Vincent/fractionAddition/fractionAddition.ipynb
@@ -29,7 +29,19 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "A fraction is defined as a numerical representation of parts of a whole \"object\". We can think of it as dividing the \"object\" into equal parts. There are many cases where it is useful to add or subtract two fractions together. For example, Kevin had two large pizza's at his birthday party, one pepperoni and one deluxe. If each pizza where cut into 8 slices and the pepperoni pizza had 3 slices left and the deluxe had 5, how many slices are left over? What if the delux pizza was cut into 12 slices instead of 8? These are examples where we must add two fractions to solve the problem. This notebook will explore how to add and subtract fractions of two forms: \n",
+    "A **fraction** is a *number*, but not (necessarily) a whole number. A fraction is written in the form $\\dfrac{a}{b}$, where $a$ and $b$ are integers, with $b\\neq 0$. \n",
+    "\n",
+    "The number $a$ (on top) is called the **numerator** and the number $b$ (on the bottom) is called the **denominator**. \n",
+    "\n",
+    "Fractions are used to represent parts of a whole \"object\". \n",
+    "\n",
+    "The denominator $b$ tells us the number of equal parts an object is divided into.\n",
+    "\n",
+    "The denominator $a$ tells us how many of those parts we have.\n",
+    "\n",
+    "For example, if a pizza is divided into 8 equal slices, and I eat 3 of them, then I've eaten $\\dfrac{3}{8}$ of a pizza.\n",
+    "\n",
+    "There are many cases where it is useful to add or subtract two fractions. For example, Kevin had two large pizzas at his birthday party, one pepperoni and one deluxe. If each pizza were cut into 8 slices and the pepperoni pizza had 3 slices left and the deluxe had 5, how much pizza is left over? What if the deluxe pizza was cut into 12 slices instead of 8? These are examples where we must add two fractions to solve the problem. This notebook will explore how to add and subtract fractions of two forms: \n",
     "- Two fractions with the same denominators\n",
     "- Two fractions with different denominator"
    ]
@@ -39,15 +51,17 @@
    "metadata": {},
    "source": [
     "### Fractions (quick recap)\n",
-    "A fraction is a numbers that stands for part of something.\n",
+    "A fraction is a number that stands for part of something.\n",
     "\n",
-    "For example the fraction $\\frac{1}{2}$ represents half of one integer, in other words $0.5$. Statements like $\\frac{1}{2} = \\frac{16}{32}$ can sometimes confuse people because it is not always intuative to see how $1$ might relate to $16$ or $2$ to $32$ but in reality they both simply mean *one half*. Another way to say $\\frac{1}{2}$ is to say $1$ *divided by* $2$, as a little exercise try inputing $1\\div 2$ into a calculator then try $16 \\div 32$, did you get the same answer both times? ![Half](./assets/calculatorHalf.png)\n",
+    "For example the fraction $\\frac{1}{2}$ represents half of one integer, in other words $0.5$. Statements like $\\frac{1}{2} = \\frac{16}{32}$ can sometimes confuse people because it is not always intuative to see how $1$ might relate to $16$ or $2$ to $32$ but in reality they both simply mean *one half*. Another way to say $\\frac{1}{2}$ is to say $1$ *divided by* $2$. As a little exercise try inputing $1\\div 2$ into a calculator then try $16 \\div 32$. Did you get the same answer both times? ![Half](./assets/calculatorHalf.png)\n",
     "\n",
-    "Still don't believe me, try inputing $1 \\div 4$ then try $77 \\div 308$.![Quarter](./assets/calculatorQuarter.png)\n",
+    "Still don't believe me? Try inputing $1 \\div 4$ then try $77 \\div 308$.![Quarter](./assets/calculatorQuarter.png)\n",
     "\n",
     "What is really happeneing is that the bottom number (the denominator) tells you how many equal parts the *object* is divided into and the top number (the numerator) tells you how many of these equal parts we actually have. \n",
     "![Fraction](./assets/numDenom.png)\n",
-    "There are three main catagories when talking about fractions: proper, inproper, and mixed. A proper fraction "
+    "There are three main catagories when talking about fractions: proper, improper, and mixed. A proper fraction is one where the numerator is less than the denominator, and represents a number between 0 and 1. An improper fraction is one where the numerator is larger than the denomonator, and it represents a number bigger than 1.\n",
+    "\n",
+    "A mixed number is the sort of thing you might encounter in carpentry or a baking recipe, like $3\\,\\frac14$ inches, or $1\\,\\frac12$ cups of flour. Mixed numbers and improper fractions are two different ways of expressing the same number, and it is possible to [convert between them](https://www.mathsisfun.com/improper-fractions.html)."
    ]
   },
   {
@@ -55,7 +69,7 @@
    "metadata": {},
    "source": [
     "### Fractions with the same denominators\n",
-    "The simplest fraction addition or subtraction happens when both denominators are the same. Lets take our pizza example from above to make the following formula $\\frac{3}{8} + \\frac{5}{8}=x$. Since each whole pizza where cut into $8$ slices than they both have $8$ as their denominators, therefore $3$ out of $8$ slices of pepperonie left and $5$ out of $8$ slices of delux left. Now since they have both have the same denominator, all we need to do is add the numerators together: $$\\frac{3}{8} + \\frac{5}{8}=\\frac{3+5}{8}=\\frac{8}{8}$$ Looking at this result of $\\frac{8}{8}$ we now know that there is an entire pizza leftover from the party. Subtraction follows the same rules as with addition. Let's assumer we want to know how many slices of pepperonie pizza where eaten at the party. We know the pizza was initially cut into 8 slices and only 3 remained therefore: $$\\frac{8}{8}-\\frac{3}{8}=\\frac{8-3}{8}=\\frac{5}{8}$$ This means that $5$ slices of pepperonie pizza where eaten."
+    "The simplest fraction addition or subtraction happens when both denominators are the same. Lets take our pizza example from above to make the following formula: $\\frac{3}{8} + \\frac{5}{8}=x$. Since each whole pizza where cut into $8$ slices than they both have $8$ as their denominators, therefore $3$ out of $8$ slices of pepperoni left and $5$ out of $8$ slices of deluxe left. Now since they have both have the same denominator, all we need to do is add the numerators together: $$\\frac{3}{8} + \\frac{5}{8}=\\frac{3+5}{8}=\\frac{8}{8}$$ Looking at this result of $\\frac{8}{8}$ we now know that there is an entire pizza left over from the party. Subtraction follows the same rules as with addition. Let's assume we want to know how many slices of pepperoni pizza were eaten at the party. We know the pizza was initially cut into 8 slices and only 3 remained therefore: $$\\frac{8}{8}-\\frac{3}{8}=\\frac{8-3}{8}=\\frac{5}{8}$$ This means that $5$ slices of pepperoni pizza were eaten."
    ]
   },
   {
