comparison table some other issues solved
In this commit, we rectified all of the suggestions that were given by the reviewers.

--- a/Rajib/CC66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
+++ b/Rajib/CC66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,8 @@
     "    else:\n",
     "        print(\"There is no mode\")\n",
     "\n",
-    "    Counter(dataset)\n"
+    "    Counter(dataset)\n",
+    "    return mean, median, hits[0][1]\n"
    ]
   },
   {
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,8 @@
     }
    ],
    "source": [
-    "computeCenTendency(data)"
+    "centralTendency = []\n",
+    "centralTendency = computeCenTendency(data)"
    ]
   },
   {
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,13 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07cc1fdfa10d4b4aaeb4e867427f4821",
+       "model_id": "361bee4740c441f580784d57edd970bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdf705d6898c43afadc6eb4effa3d945",
+       "model_id": "7a4e3408f9c947f8b8d92c05b87fd9fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +390,8 @@
     "        dataWithoutOutlier.append(int(row[1]))\n",
     "print(\"Data read from the file: \", dataWithoutOutlier)\n",
     "\n",
-    "computeCenTendency(dataWithoutOutlier)\n",
+    "centralTendencyWithoutOutlier = []\n",
+    "centralTendencyWithoutOutlier = computeCenTendency(dataWithoutOutlier)\n",
     "\n",
     "def callPlottingFunctionNoOutlier(num_bins):\n",
     "    print(\"Generating... plot for :\", num_bins)\n",
@@ -407,16 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number(s) of Outlier : 1\n",
-      "Outlier 1: 1234\n",
-      "Dataset with outlier (last 1 entry was added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 1234]\n"
+      "Number(s) of Outlier : 2\n",
+      "Outlier 1: 23234\n",
+      "Outlier 2: 23232\n",
+      "Dataset with outliers (last 2 entries were added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 23234, 23232]\n"
      ]
     }
    ],
@@ -444,21 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  533.862\n",
-      "Median:  460.0\n",
+      "Mean:  2023.8\n",
+      "Median:  471.0\n",
       "Mode: 340 (appeared 2 times.)\n"
      ]
     }
    ],
    "source": [
-    "computeCenTendency(datasetWithOutlier)"
+    "centralTendencyWithOutlier = []\n",
+    "centralTendencyWithOutlier = computeCenTendency(datasetWithOutlier)"
    ]
   },
   {
@@ -471,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -479,7 +484,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03d156cbfd9949709e27f67bfbd21e39",
+       "model_id": "7fd7a64b61da475ea9ef82acfd75d90f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,6 +526,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~rcdas/11.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "import pandas as pd\n",
+    "import colorlover as cl\n",
+    "\n",
+    "criteriaArray = ['Mean', 'Median', 'Mode']\n",
+    "centralTendencyCriteriaArray = np.asarray(criteriaArray)\n",
+    "centralTendencyWithoutOutlierArray = np.around(np.asarray(centralTendencyWithoutOutlier), 3)\n",
+    "centralTendencyWithOutlierArray = np.around(np.asarray(centralTendencyWithOutlier), 3) \n",
+    "tableValues = [centralTendencyCriteriaArray, centralTendencyWithoutOutlierArray,centralTendencyWithOutlierArray]\n",
+    "\n",
+    "\n",
+    "colors = cl.scales['3']['div']['RdYlGn']\n",
+    "data = {'cenTendencyValues' : tableValues,\n",
+    "        'Color' : colors}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "trace0 = go.Table(\n",
+    "  header = dict(\n",
+    "    values = [\" \",\"Before adding outlier\", \"After adding outlier\"],\n",
+    "    line = dict(color = 'white'),\n",
+    "    fill = dict(color = 'white'),\n",
+    "    align = ['center'],\n",
+    "    font = dict(color = 'black', size = 15)\n",
+    "  ),\n",
+    "  cells = dict(\n",
+    "    values = df.cenTendencyValues,\n",
+    "    line = dict(color = '#506784'),\n",
+    "    fill = dict(color = [df.Color]),\n",
+    "    align = 'center',\n",
+    "    font = dict(color = 'black', size = 13)\n",
+    "    ))\n",
+    "\n",
+    "data = [trace0]\n",
+    "\n",
+    "py.iplot(data, filename = \"Effets of Outliers\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -532,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -646,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "metadata": {
     "scrolled": true
    },
@@ -732,7 +798,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba80b73a04af4c888f461f1856368d32",
+       "model_id": "10859047b54b48ec94dd4c06a6addd32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +884,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "286a77b296c646e391c94d26a4101073",
+       "model_id": "3daf0660afe24194904bf59fd28a4c8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -838,18 +904,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=1, options=('Select best one', '2.95', '3', '3.05', '3.10', 'None of the above'), value='2.95')"
+       "RadioButtons(description='Choices:', options=('Select best one', '2.95', '3', '3.05', '3.10', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrong answer! Try again.\n"
-     ]
     }
    ],
    "source": [
@@ -877,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1028,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3452cf75718541d6ac5f8edf81182393",
+       "model_id": "d2030efee4b54cd6a9927440589e10e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -989,18 +1048,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=4, options=('Select best one', '2.43', '2.5', '2.67', '2.75', 'None of the above'), value='2.75')"
+       "RadioButtons(description='Choices:', options=('Select best one', '2.43', '2.5', '2.67', '2.75', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct Answer!\n"
-     ]
     }
    ],
    "source": [
@@ -1027,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cab4c1fe1c14df6908e7767a49fe894",
+       "model_id": "0a0bbc57cd1b482a808ce752a8f37543",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1160,18 +1212,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=1, options=('Select best one', 'Negatively Skewed', 'Positively skewed', 'both of them', 'None of the above'), value='Negatively Skewed')"
+       "RadioButtons(description='Choices:', options=('Select best one', 'Negatively Skewed', 'Positively skewed', 'both of them', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct Answer!\n"
-     ]
     }
    ],
    "source": [
@@ -1198,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "509e0f21876c46af80dfc788a57ff578",
+       "model_id": "f057eb89a8b44646bab69a7de1da3f81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1353,18 +1398,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=3, options=('Select best one', '2.5 and 3.1', '2.6 and 3.1', '2.6 and 3.2', '2.8 and 3.2', 'None of the above'), value='2.6 and 3.2')"
+       "RadioButtons(description='Choices:', options=('Select best one', '2.5 and 3.1', '2.6 and 3.1', '2.6 and 3.2', '2.8 and 3.2', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct Answer!\n"
-     ]
     }
    ],
    "source": [
@@ -1392,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "956c24e95f304d36b809e5bbc5f51b28",
+       "model_id": "5000f82d0eb44c3d85bca29dbdaea724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1518,18 +1556,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=3, options=('Select best one', '78', '78.5', '79', '80', 'None of the above'), value='79')"
+       "RadioButtons(description='Choices:', options=('Select best one', '78', '78.5', '79', '80', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct Answer!\n"
-     ]
     }
    ],
    "source": [
@@ -1556,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1706,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7df79315c23e4a03b27dcc913251f92a",
+       "model_id": "a478f753a50f4008be0d2383d74c4070",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1695,18 +1726,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=1, options=('Select best one', '1.6 and 4.1', '1.7 and 3.9', '2.2 and 3.8', '1.7 and 4.1', 'None of the above'), value='1.6 and 4.1')"
+       "RadioButtons(description='Choices:', options=('Select best one', '1.6 and 4.1', '1.7 and 3.9', '2.2 and 3.8', '1.7 and 4.1', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrong answer! Try again.\n"
-     ]
     }
    ],
    "source": [
@@ -1734,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1862,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "706d98cbc81e4b84a6e888d486ef0d5d",
+       "model_id": "3d95f36df8e94f2d92efbe5bc13edbb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1858,18 +1882,11 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', index=4, options=('Select best one', '2.2', '3.8', '1.7', '2.1', 'None of the above'), value='2.1')"
+       "RadioButtons(description='Choices:', options=('Select best one', '2.2', '3.8', '1.7', '2.1', 'None of the above'), value='Select best one')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct Answer!\n"
-     ]
     }
    ],
    "source": [
@@ -1896,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
