Added banner to eco notebook

--- a/Nathan/combinations/Combinations.ipynb
+++ b/Nathan/combinations/Combinations.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the solutions to the table above is simply pascals triangle! \n",
+    "As we can see, the solutions to the table above is simply pascals triangle.\n",
     "\n",
     "## Combinations in action\n",
     "\n",
@@ -250,6 +250,111 @@
     "There are $13983816$ combinations of numbers in the lotto 6/49 draw. Now, lotto 6/49 draws every week. If you bought a ticket for the lottery every week, your chance of winning the lottery would be $\\frac{1}{13983816}$ which is approximately 0.00000715% or conversely, the chances that you fail to win the lottery are $1 - \\frac{1}{13983816} \\approx 99.9999925%$. Let's imagine that a ticket is 5 dollars and you play every week for a year. For every week played, we simply just raise the odds to that power (since that is how many times we are attempting to win the lottery). There are 52 weeks in a year, so the odds of failure are $(1-\\frac{1}{13983816})^{52} = 99.99962...$ which is a 0.00038% chance of winning (1 - 99.99962). You just spent $5 * 52 = 260$ dollars on a 0.00038% chance to win the lottery. Yikes.\n",
     "\n",
     "Another everyday example of combinations, although not entirely useful, is making groups of students. In the next section we will take a look at the probability of certain events happening using combinations. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    .binomial-co-question-container {\n",
+       "        display: flex;\n",
+       "        justify-content: space-between;\n",
+       "        width: 25%;\n",
+       "        margin-top: 20px;\n",
+       "    }\n",
+       "    \n",
+       "    .binomial-co-question-answer {\n",
+       "        width: 50px;\n",
+       "        margin-left: 40px;\n",
+       "    }\n",
+       "    \n",
+       "    .binomial-co-question-feedback {\n",
+       "        margin-left: 40px;\n",
+       "    }\n",
+       "    \n",
+       "    input[type=button] {\n",
+       "        margin-top:20px;\n",
+       "    }\n",
+       "</style>\n",
+       "<p>$_nC_r = _{49}C_6 = \\frac{?}{?} = ?$ </p>\n",
+       "\n",
+       "<div id=\"binomial-co-questions-container\">\n",
+       "    <div class=\"binomial-co-question-container\">\n",
+       "        <p>Numerator: </p>\n",
+       "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=3>\n",
+       "        <p class=\"binomial-co-question-feedback hidden\">\n",
+       "    </div>\n",
+       "    <div class=\"binomial-co-question-container\">\n",
+       "        <p>Denominator: </p>\n",
+       "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=8>\n",
+       "        <p class=\"binomial-co-question-feedback hidden\">\n",
+       "    </div>\n",
+       "    <div class=\"binomial-co-question-container\">\n",
+       "        <p>Answer: </p>\n",
+       "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=8>\n",
+       "        <p class=\"binomial-co-question-feedback hidden\">\n",
+       "    </div>\n",
+       "    <input type=\"button\" value=\"Submit answers\" onclick=\"check_binomial_answers()\">\n",
+       "</div>\n",
+       "<script src=\"js/binomial_coefficient.js\"></script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html \n",
+    "<style>\n",
+    "    .binomial-co-question-container {\n",
+    "        display: flex;\n",
+    "        justify-content: space-between;\n",
+    "        width: 25%;\n",
+    "        margin-top: 20px;\n",
+    "    }\n",
+    "    \n",
+    "    .binomial-co-question-answer {\n",
+    "        width: 50px;\n",
+    "        margin-left: 40px;\n",
+    "    }\n",
+    "    \n",
+    "    .binomial-co-question-feedback {\n",
+    "        margin-left: 40px;\n",
+    "    }\n",
+    "    \n",
+    "    input[type=button] {\n",
+    "        margin-top:20px;\n",
+    "    }\n",
+    "</style>\n",
+    "<p>$_nC_r = _{49}C_6 = \\frac{?}{?} = ?$ </p>\n",
+    "\n",
+    "<div id=\"binomial-co-questions-container\">\n",
+    "    <div class=\"binomial-co-question-container\">\n",
+    "        <p>Numerator: </p>\n",
+    "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=3>\n",
+    "        <p class=\"binomial-co-question-feedback hidden\">\n",
+    "    </div>\n",
+    "    <div class=\"binomial-co-question-container\">\n",
+    "        <p>Denominator: </p>\n",
+    "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=8>\n",
+    "        <p class=\"binomial-co-question-feedback hidden\">\n",
+    "    </div>\n",
+    "    <div class=\"binomial-co-question-container\">\n",
+    "        <p>Answer: </p>\n",
+    "        <input class=\"binomial-co-question-answer\" type=\"text\" maxlength=8>\n",
+    "        <p class=\"binomial-co-question-feedback hidden\">\n",
+    "    </div>\n",
+    "    <input type=\"button\" value=\"Submit answers\" onclick=\"check_binomial_answers()\">\n",
+    "</div>\n",
+    "<script src=\"js/binomial_coefficient.js\"></script>"
    ]
   },
   {
@@ -266,9 +371,9 @@
     "\n",
     "$_{20}C_{4} = \\frac{20!}{4!16!} = 4845$\n",
     "\n",
-    "Now, we divide the number of ways the teacher can make a group of all girls (495) by the total number of ways we can arrange the class (4845):\n",
+    "Now, we divide the number of ways the teacher can make a group of all girls (495) by the total number of ways we can arrange the class (4845) or:\n",
     "\n",
-    "$\\frac{_{12}C_{4}}{_{20}C_{4}} = \\frac{\\frac{12!}{4!8!}}{\\frac{20!}{4!16!}} = \\frac{12!}{8!}*\\frac{16!}{20!} = (12*11*10*9) * (20*19*18*17) \\approx 0.1022$ or $10.22$%\n",
+    "$\\frac{_{12}C_{4}}{_{20}C_{4}} = \\frac{\\frac{12!}{4!8!}}{\\frac{20!}{4!16!}} = \\frac{12!}{8!}*\\frac{16!}{20!} = (12*11*10*9) * (20*19*18*17) \\approx 0.1022$ or $10.22\\%$\n",
     "\n",
     "## Compound Events\n",
     "\n",
