--- a/Nathan/eco/Eco.ipynb
+++ b/Nathan/eco/Eco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text][top-banner]\n",
+    "\n",
+    "[top-banner]: ./imgs/callysto-top-banner.jpg"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -1042,8 +1051,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1090,6 +1101,15 @@
     "![alt text][table1]\n",
     "\n",
     "[table1]: ./imgs/davosdilemma.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text][bottom-banner]\n",
+    "\n",
+    "[bottom-banner]: ./imgs/callysto-bottom-banner.jpg"
    ]
   },
   {
