--- a/Nathan/eco/Eco.ipynb
+++ b/Nathan/eco/Eco.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "source": [
     "# Ecoglobalization\n",
-    "_by Joel and Nathan Tipper_\n",
+    "_by Joel Houle and Nathan Tipper_\n",
     "\n",
     "## Key Concepts\n",
     "**Sustainable development**, is the development that meets the needs of the present without compromising the ability of future generations to meet their own needs.\n",
