--- a/Vincent/fractionMultiplication/fractionMultiplication.ipynb
+++ b/Vincent/fractionMultiplication/fractionMultiplication.ipynb
@@ -18,6 +18,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing Fraction Multiplication\n",
+    "### Introduction\n",
+    "An important skill to have when it comes to fractions is knowing how to multiply them together.<br>\n",
+    "\n",
+    "As we know, fractions are of the form $\\frac{a}{b}$ with $a$ and $b$ integers and $b\\neq 0$. <br>\n",
+    "\n",
+    "$\\frac{a}{b}$ simply means $a\\div b$, now since a fraction is a division problem than it works well with multiplication, this means that multiplying fractions is easy and straight forward. <br>\n",
+    "\n",
+    "In this notebook we will visit two forms of multiplying fractions\n",
+    "- multiplying two fractions together ($\\frac{a}{b} \\times \\frac{c}{d}$)\n",
+    "- multiplying a fraction by a constant ($\\frac{a}{b} \\times c$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Procedure\n",
+    "As mentioned earlier, multiplying two fractions together is simple. Let's say we have two fractions, $\\frac{a}{b}$ and $\\frac{c}{d}$ and we want to multiply them together $\\frac{a}{b} \\times \\frac{c}{d}=x$. All we have to do is multiply the numerators (top number) together than multiply the denominators (bottom number) together. Let's take a look: \n",
+    "\n",
+    "$$\\frac{a}{b} \\times \\frac{c}{d}=\\frac{a\\times c}{b\\times d}=\\frac{ac}{bd}$$ <br>\n",
+    "\n",
+    "Ok let's try this with numbers and see how it works. Take the fractions $\\frac{3}{7}$ and $\\frac{2}{3}$ and multiply them together: \n",
+    "\n",
+    "$$\\frac{3}{5}\\times\\frac{2}{3}$$Now lets multiply the numerators together and the denominators together: \n",
+    "\n",
+    "$$\\frac{3\\times 2}{5\\times 3}=\\frac{6}{15}$$ And there we have it $\\frac{3}{5}\\times\\frac{2}{3}$ equal to $\\frac{6}{15}$<br>\n",
+    "\n",
+    "Now that we understand how to multiply two fractions together, let's think about what it actually means. Recal that a fraction simply represents a part of something. We can think of multiplying fractions together as taking a part of another part. In other words saying $\\frac{1}{2}\\times\\frac{1}{2}$ is like saying $\\frac{1}{2}$ of $\\frac{1}{2}$ (one half **of** one half). If we have $\\frac{1}{2}$ of a pizza and we want $\\frac{1}{2}$ of it what do we end up with?<br>\n",
+    "\n",
+    "<img src=\"./images/pizza.png\" width=\"400px\">\n",
+    "\n",
+    "We get $\\frac{1}{4}$ because $\\frac{1}{2}\\times\\frac{1}{2}=\\frac{1}{4}$.<br>\n",
+    "\n",
+    "Watch the video below to help us further visualize this concept."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -28,6 +69,13 @@
     "<iframe width=\"640\" height=\"360\" src=\"https://www.youtube.com/embed/hr_mTd-oJ-M\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe> \n",
     "<p><a href=\"https://www.youtube.com/channel/UC4a-Gbdw7vOaccHmFo40b9g\" target=\"_blank\">Click here</a> for more videos by Khan Academy</p>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The widget below allows you to visualize fraction multiplication as it was shown in the video, start by entering a fraction in the boxes below."
    ]
   },
   {
@@ -54,6 +102,17 @@
     "          width: 40px;\n",
     "          height: 3px;\n",
     "          background-color: #000000;\n",
+    "    }\n",
+    "    \n",
+    "    .ingredientsInput {\n",
+    "        margin-left: 10px;\n",
+    "        margin-right: 10px;\n",
+    "        max-width: 40px;\n",
+    "        /* float: right; */\n",
+    "    }\n",
+    "    \n",
+    "    li {\n",
+    "        margin-bottom: 15px;\n",
     "    }\n",
     "</style>"
    ]
@@ -89,6 +148,61 @@
     "    \n",
     "  <div style=\"clear: left; margin-left: 10px\">\n",
     "    <button type=\"button\" id=\"resetBtn\" class=\"btn btn-primary buttons\">Reset</button>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiplying a fraction with a constant\n",
+    "In this section we will talk about multiplying a fraction $\\frac{a}{b}$ with a constant $c$ (a single integer). A good example of when this could be useful is when you need to double a recipe when cooking. <br>\n",
+    "\n",
+    "Doing multiplication of this form is simply a subset of multiplying two fractions together since any constant $c$ can be rewritten as $\\frac{c}{1}$, if you don’t believe me try putting in your calculator any number divided by $1$, you will always get back the original number. <br>\n",
+    "\n",
+    "Let's demonstrate this with an example, take the fraction $\\frac{5}{13}$ and the constant $2$ and multiply them together, we get: \n",
+    "\n",
+    "$$\\frac{5}{13}\\times 2 = x$$\n",
+    "\n",
+    "Now remember that any constant can be rewritten as $\\frac{c}{1}$, let's do that with our constant $2$:\n",
+    "\n",
+    "$$\\frac{5}{13}\\times\\frac{2}{1} = x$$\n",
+    "\n",
+    "And now we can solve the problem as shown before:\n",
+    "\n",
+    "$$\\frac{5}{13}\\times\\frac{2}{1} = \\frac{5\\times 2}{13\\times 1}= \\frac{10}{13} $$\n",
+    "\n",
+    "The big take away from this is that the denominator does not change as it is simply multiplied by $1$. This means we did not change the _\"whole\"_, we only changed how many parts of the _\"whole\"_ we have (the numerator). In effect all we did was simply double our fraction since our constant was 2. <br>\n",
+    "\n",
+    "Let us practice what we just learned with a recipe example. Below you will see the ingredient list for my famous **Fresh Tomato and Basil Pasta Salad** recipe. This recipe makes enough for 4 servings, we would like to double the recipe in order to serve 8 people. Apply what we have learned so far to double the ingredients list for the **tomato and basil pasta salad** in order to make 8 servings. \n",
+    "\n",
+    "(Enter your answer in the provided boxes, when your done click _check answer_ to see if you are correct!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<div class=\"ingredientsList\">\n",
+    "    <h1>Fresh Tomato and Basil Pasta Salad</h1>\n",
+    "      <ul style=\"max-width: 500px;\">\n",
+    "        <li><label>3 medium ripe tomatoes, chopped --></label><input id=\"tomatoes\" class=\"ingredientsInput\"></input><label>tomatoes</label></li>\n",
+    "        <li><label>1/3 cup thinly sliced fresh basil --></label><input id=\"basil\" class=\"ingredientsInput\"></input><label>cup</label></li>\n",
+    "        <li><label>2 Tbsp. olive oil --></label><input id=\"olivOil\" class=\"ingredientsInput\"></input><label>Tbsp.</label></li>\n",
+    "        <li><label>1 clove garlic, minced --></label><input id=\"garlic\" class=\"ingredientsInput\"></input><label>clove</label></li>\n",
+    "        <li><label>1/2 tsp. salt --></label><input id=\"salt\" class=\"ingredientsInput\"></input><label>tsp.</label></li>\n",
+    "        <li><label>1/4 tsp. pepper --></label><input id=\"pepper\" class=\"ingredientsInput\"></input><label>tsp.</label></li>\n",
+    "        <li><label>8 oz. rotini pasta pasta, uncooked --></label><input id=\"pasta\" class=\"ingredientsInput\"></input><label>oz.</label></li>\n",
+    "        <li><label>3/4 cup Parmesan Style Grated Topping --></label><input id=\"parmesan\" class=\"ingredientsInput\"></input><label>cup</label></li>\n",
+    "      </ul>\n",
+    "      <button type=\"button\" id=\"checkAnswerBtn\">Check Answers</button>\n",
+    "      <button type=\"button\" id=\"resetBtn\">Reset</button>\n",
+    "</div>\n",
+    "<div>\n",
+    "    <h2 id=\"answerStatus\"></h2>\n",
+    "</div>"
    ]
   },
   {
@@ -283,6 +397,77 @@
     "  resetInputs();\n",
     "  stateControler(0);\n",
     "}\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<script type=\"text/javascript\">\n",
+    "      var x = 2; //Recipie multiplyer\n",
+    "\n",
+    "      getInput('checkAnswerBtn').onclick = function() {\n",
+    "        if(checkAnswers()) {\n",
+    "          d3.select('#answerStatus').text('Correct!! Good job.');\n",
+    "        } else {\n",
+    "          d3.select('#answerStatus').text('Not quite, keep trying!');        \n",
+    "        }\n",
+    "      };\n",
+    "        \n",
+    "        getInput('resetBtn').onclick = function() {\n",
+    "        var inputs = document.getElementsByClassName('ingredientsInput');\n",
+    "        for(var i = 0; i < inputs.length; i++) {\n",
+    "          inputs[i].value = '';\n",
+    "        }\n",
+    "        d3.selectAll('.ingredientsInput').style('background-color', '#ffffff')\n",
+    "      };\n",
+    "\n",
+    "      function checkAnswers() {\n",
+    "        var isCorrect = true;\n",
+    "        if(!checkAnswer('tomatoes', x*3))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('basil', x*(1/3)))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('olivOil', x*2))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('garlic', x*1))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('salt', x*(1/2)))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('pepper', x*(1/4)))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('pasta', x*8))\n",
+    "          isCorrect = false;\n",
+    "        if(!checkAnswer('parmesan', x*(3/4)))\n",
+    "          isCorrect = false;\n",
+    "\n",
+    "        return isCorrect;\n",
+    "      };\n",
+    "\n",
+    "      function checkAnswer(id, ans) {\n",
+    "        if(eval(getInput(id).value) === ans) {\n",
+    "          return answerCorrect(id);\n",
+    "        }\n",
+    "        return answerIncorrect(id);\n",
+    "      };\n",
+    "\n",
+    "      function answerCorrect(id) {\n",
+    "        d3.select('#' + id).style('background-color', '#76D177');\n",
+    "        return true;\n",
+    "      }\n",
+    "\n",
+    "      function answerIncorrect(id) {\n",
+    "        d3.select('#' + id).style('background-color', '#BB4646');\n",
+    "        return false;\n",
+    "      }\n",
+    "\n",
+    "      function getInput(id) {\n",
+    "        return document.getElementById(id);\n",
+    "      };\n",
     "</script>"
    ]
   },
