All comments of first demo been resolved.

--- a/Rajib/CC66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
+++ b/Rajib/CC66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
@@ -97,7 +97,7 @@
     "This notebook is organized as follows. In section 1, we discuss the preliminaries, definition of outliers and followed by two primary examples. In the next section,  we first compute the basic central tendency without outliers by importing data set from local folder. In section 3, once we've covered the basics, you'll have the opportunity to use some basic Python tools to adjust a dataset by adding one or more outliers, and then observe the effect on mean, median, and mode. In the following section, we use python library as a data source. In section 5, we summarized the notebook. Section 6, represents the exercises problem for students. \n",
     "\n",
     "## <font color='Blue'> 1 Preliminaries </font> \n",
-    "To get the very basic ideas of central tendency you may visit another notebook [CC-65](CC65-Central_Tendency.ipynb) \n",
+    "To get the very basic ideas of central tendency you may visit another notebook [CC-65 Central Tendency](CC65-Central_Tendency.ipynb) \n",
     "\n",
     "\n",
     "\n",
